added slider image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,27 @@
     </div>
     </nav>
     <!-- Image Slider -->
+    <div id="slides" class="carousel slide" data-ride="carousel">
+        <ul class="carousel-indicators">
+            <li data-target="#slides" data-slides-to="0" class="active"></li>
 
+            <li data-target="#slides" data-slides-to="1" class="active"></li>
+
+            <li data-target="#slides" data-slides-to="2" class="active"></li>
+        </ul>
+
+    <div class="carosel-inner">
+        <div class="carousel-item active">
+            <img src="img/slider0.jpg">
+        </div>
+        <div class="carousel-item active">
+            <img src="img/slider2.jpg">
+        </div>
+        <div class="carousel-item active">
+            <img src="img/slider3.jpg">
+        </div>
+    </div>
+    </div>
 
 
     <!-- Jumbotron -->
