--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="img/boat.png"></a>
+        <a class="navbar-brand" href="#"><img src="img/logos.png">Dream<span style="color: blue">Boat</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -67,32 +67,99 @@
 
     <div class="carosel-inner">
         <div class="carousel-item active">
-            <img src="img/slider0.jpg">
+
+            <img class="img-fluid" src="img/slider0.jpg">
+            <div class="carousel-caption">
+                <h1 class="display-2 text-success">DreamBoat</h1>
+                <h2>Responsive Website Design</h2><a href="services">
+                <button type="button" class="btn btn-outline-light btn-lg">View Work</button></a><a href="contact">
+                <button type="button" class="btn btn-primary btn-lg">Get Started</button></a>
+            </div>
         </div>
-        <div class="carousel-item active">
-            <img src="img/slider2.jpg">
+        <div class="carousel-item">
+            <img class="img-fluid" src="img/slider4.png">
         </div>
-        <div class="carousel-item active">
-            <img src="img/slider3.jpg">
+        <div class="carousel-item">
+            <img class="img-fluid" src="img/slider3.jpg">
         </div>
     </div>
     </div>
 
 
     <!-- Jumbotron -->
-
-
+    <div class="container-fluid">
+        <div class="row jumbotron">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl- 10">
+                <p class="lead"> A website design company that helps you create responsive websites that suits the needs of your organisation</p>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col xl-2">
+            <a href="contact"><button type="button" class="btn btn-outline-secondary btn-lg">Reach Us</button></a>
+        </div>
+    </div>
+    </div>
 
     <!-- Welcome Section -->
-
-
+    <div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-3">Design with Simplicity</h1>
+        </div>
+        <hr>
+        <div class="col-12">
+            <p class="lead"> Welcome to our company. We help your business grow online with the right traffic. You will be able to reach the peak with the help of our professionals.</p>
+        </div>
+    </div>
+    </div>
 
     <!-- Three Column Section -->
+    <div class="container-fluid padding">
+    <div class="row text-center padding">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <i class="fas fa-search"></i>
+            <h3>Search Engine Optimisation</h3>
+            <p>We help you reach customers that are both far and wide</p>
+        </div>
+
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <i class="fas fa-desktop"></i>
+            <h3>Website Design</h3>
+            <p>Our Team of designers will help you create a mobile friendly and world class website</p>
+        </div>
+
+        <div class="col-sm-12 col-md-4">
+            <i class="far fa-edit"></i>
+            <h3>Content Writing</h3>
+            <p>We will help you develop contents that are SEO friendly and about current trends</p>
+        </div>
+    </div>
+    </div>
 
 
 
     <!-- Two column section -->
+    <div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-lg-6">
+            <h3>Try us out...</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <br>
 
+            <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+        <div class="col-lg-6">
+            <img src="img/desktop.jpg" class="img-fluid">
+        </div>
+        </div>
+    </div>
+    </div>
 
 
     <!-- Fixed background -->
