--- a/index.html
+++ b/index.html
@@ -160,14 +160,39 @@
         </div>
     </div>
     </div>
-
+    <hr class="my-4">
 
     <!-- Fixed background -->
-
-
+    <figure>
+        <div class="fixed-wrap">
+            <div id="fixed">
+            </div>
+        </div>
+    </figure>
 
     <!-- Emoji Section -->
+    <button class="fun" data-toggle="collapse" data-target="#emoji">Click Bait</button>
+    <div id="emoji" class="collapse">
+    <div class="container-fluid padding">
+    <div class="row text-center">
+        <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif1.gif">
+        </div>
 
+        <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif2.gif">
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif3.gif">
+        </div>
+
+        <div class="col-sm-6 col-md-3">
+            <img class="gif" src="img/gif4.gif">
+        </div>
+    </div>
+    </div>
+    </div>
 
 
     <!-- Meet The Team -->
