added card images

--- a/index.html
+++ b/index.html
@@ -196,11 +196,64 @@
 
 
     <!-- Meet The Team -->
-
-
+    <div class="container-fluid padding">
+    <div class="row welcome text-center">
+        <div class="col-12">
+            <h1 class="display-4">Meet The Team</h1>
+        </div>
+        <hr class="my-4">
+    </div>
+    </div>
 
     <!-- Cards -->
+    <div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="img/team1.jpg">
+            <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+                <a class="btn btn-outline-secondary" href="#">See Profile</a>
+            </div>
+        </div>
+        </div>
 
+        <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="img/team2.jpg">
+            <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+                <a class="btn btn-outline-secondary" href="#">See Profile</a>
+            </div>
+        </div>
+        </div>
+
+        <div class="col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="img/team3.jpg">
+            <div class="card-body">
+                <h4 class="card-title">John Doe</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat.</p>
+                <a class="btn btn-outline-secondary" href="#">See Profile</a>
+            </div>
+        </div>
+        </div>
+
+
+
+    </div>
+    </div>
 
 
     <!-- Two column section -->
