added social media icons & created foooter section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <div class="card">
             <img class="card-img-top" src="img/team2.jpg">
             <div class="card-body">
-                <h4 class="card-title">John Doe</h4>
+                <h4 class="card-title">Jane Doe</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -240,7 +240,7 @@
         <div class="card">
             <img class="card-img-top" src="img/team3.jpg">
             <div class="card-body">
-                <h4 class="card-title">John Doe</h4>
+                <h4 class="card-title">Mary Doe</h4>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -257,15 +257,80 @@
 
 
     <!-- Two column section -->
+    <div class="container-fluid padding">
+    <div class="row padding">
+        <div class="col-lg-6">
+            <h3> Our Philosophy</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
 
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
 
+        </div>
+        <div class="col-lg-6">
+            <img src="img/phil.jpg" class="img-fluid">
+        </div>
+        </div>
+    </div>
+    </div>
 
     <!-- Connect -->
-
+    <div class="container-fluid padding">
+    <div class="row text-center padding">
+        <div class="col-12">
+            <h2>Connect</h2>
+        </div>
+        <div class="col-12 social padding">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+        </div>
+    </div>
+    </div>
 
 
     <!-- footer -->
+    <div class="container-fluid padding">
+    <div class="row text-center">
+        <div class="col-md-4">
+            <img src="img/logo.png">
+            <hr class="light">
+            <p>080-8805-3621</p>
+            <p>johndoe@gmail.com</p>
+            <p>107, yaba. Lagos.</p>
+            <p>city, state, 00000</p>
+        </div>
 
+        <div class="col-md-4">
+        <hr class="light">
+        <h4>Our Hours</h4>
+        <hr class="light">
+        <p>Monday to friday: 9am - 5pm</p>
+        <p>Weekends: 10am -4pm</p>
+        </div>
+
+         <div class="col-md-4">
+        <hr class="light">
+        <h4>Our Services</h4>
+        <hr class="light">
+        <p>Planning</p>
+        <p>Organising</p>
+        <p>Staffing</p>
+        <p>Controlling</p>
+        <p>Advertising</p>
+        </div>
+
+        <div class="col-12">
+            <hr class="light">
+            <h5>&copy; Dreamboatmedia.com</h3>
+        </div>
+    </div>
+    </div>
 
 
 
