--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img class="img-fluid" src="img/slider4.png">
+            <img class="img-fluid" src="img/slyde.jpg">
         </div>
         <div class="carousel-item">
-            <img class="img-fluid" src="img/slider3.jpg">
+            <img class="img-fluid" src="img/slyder.jpg">
         </div>
     </div>
     </div>
@@ -102,7 +102,7 @@
     <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-3">Design with Simplicity</h1>
+            <h1 class="display-3">Designed with Simplicity</h1>
         </div>
         <hr>
         <div class="col-12">
@@ -277,7 +277,7 @@
         </div>
     </div>
     </div>
-
+    <hr class="my-4">
     <!-- Connect -->
     <div class="container-fluid padding">
     <div class="row text-center padding">
@@ -295,6 +295,7 @@
 
 
     <!-- footer -->
+    <footer>
     <div class="container-fluid padding">
     <div class="row text-center">
         <div class="col-md-4">
@@ -326,12 +327,12 @@
         </div>
 
         <div class="col-12">
-            <hr class="light">
+            <hr class="light-long">
             <h5>&copy; Dreamboatmedia.com</h3>
         </div>
     </div>
     </div>
-
+    </footer>
 
 
   </body>
